update message & add test
